--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -38,11 +38,11 @@
       border: none;
       background-color: #c85c8e;
       color: #fff;
-      border-top-right-radius: 5px;
-      border-bottom-right-radius: 5px;
+      border-radius: 5px;
       cursor: pointer;
       font-family: "Cormorant Garamond", serif;
       font-weight: 700;
+      margin-left: 1rem;
 
       &_sans {
         font-family: "Montserrat", sans-serif;
